css to prevent flickering dialog when pages load

--- a/web/css/wfcss.css
+++ b/web/css/wfcss.css
@@ -46,3 +46,7 @@ body {
  height:0;
  clear:both;
 }
+
+.dialog { 
+    display: none; 
+}
